# Hackathon

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
libs/agents-common/: pyproject.toml
libs/agents-common/aegis_agents/: __init__.py  base_agent.py  bus.py  db.py  envelope.py  memory.py
libs/agents-common/tests/: test_base_agent.py  test_bus.py  test_envelope.py  test_memory.py
libs/api-common/: pyproject.toml
libs/api-common/aegis_api_common/: __init__.py  auth.py  exceptions.py  filtering.py  logging.py  pagination.py  secrets.py  security_headers.py  service_token.py  sorting.py  testing.py
libs/db/: README.md  alembic.ini  pyproject.toml
libs/db/aegis_db/: __init__.py  base.py  config.py  enums.py
libs/db/aegis_db/models/: __init__.py  alerts.py  assets.py  audit.py  auth.py  emergency.py  identity.py  incidents.py  knowledge.py  lookups.py  maintenance.py  notifications.py  organization.py  permits.py  reports.py  risk.py  timeseries.py  vision.py  weather.py
libs/db/alembic/: env.py
libs/db/alembic/versions/: 0001_extensions_and_functions.py  0002_enums.py  0003_core_tables.py  0004_native_partitioning.py  0005_hypertables.py  0006_triggers_and_constraints.py  0007_knowledge_documents.py
libs/db/seed/: run_seed.py  seed_demo_plant.py  seed_lookups.py
libs/sim-data/: README.md  pyproject.toml
services/agentic-orchestrator/: Dockerfile  README.md  pyproject.toml
services/agentic-orchestrator/app/: auth.py  config.py  main.py  pdf_text.py
services/agentic-orchestrator/app/agents/: compliance_agent.py  emergency_agent.py  fleet.py  knowledge_agent.py  learning_agent.py  maintenance_agent.py  permit_agent.py  prediction_agent.py  risk_fusion_agent.py  sensor_agent.py  supervisor_agent.py  topics.py  vision_agent.py  worker_agent.py
services/agentic-orchestrator/app/api/: agents.py
services/agentic-orchestrator/app/copilot/: entities.py  handlers.py  intents.py  router.py  session.py
services/agentic-orchestrator/app/demo/: actions.py  context.py  player.py  router.py  script.py
services/agentic-orchestrator/app/orchestrator/: clients.py  evidence.py  flow.py  reports.py  summary.py
services/agentic-orchestrator/app/reports/: charts.py  content.py  data.py  render_csv.py  render_excel.py  render_pdf.py  router.py
services/agentic-orchestrator/generated_reports/evidence/: incident-10-evidence.json  incident-12-evidence.json  incident-14-evidence.json  incident-15-evidence.json  incident-16-evidence.json  incident-17-evidence.json  incident-18-evidence.json  incident-19-evidence.json  incident-20-evidence.json  incident-21-evidence.json  incident-22-evidence.json  incident-23-evidence.json  incident-24-evidence.json  incident-25-evidence.json  incident-26-evidence.json  incident-27-evidence.json  incident-28-evidence.json  incident-30-evidence.json  incident-31-evidence.json  incident-32-evidence.json  incident-34-evidence.json  incident-35-evidence.json  incident-38-evidence.json  incident-39-evidence.json  incident-42-evidence.json  incident-44-evidence.json  incident-45-evidence.json  incident-46-evidence.json  incident-48-evidence.json  incident-49-evidence.json  incident-5-evidence.json  (+2 more)
services/agentic-orchestrator/tests/: conftest.py  test_emergency.py
services/anomaly-detection/: Dockerfile  README.md  pyproject.toml
services/anomaly-detection/app/: config.py
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: config.py
services/audit-log/: Dockerfile  README.md  pyproject.toml
services/audit-log/app/: config.py
services/computer-vision/: Dockerfile  README.md  pyproject.toml
services/computer-vision/app/: config.py  db.py  main.py
services/computer-vision/tests/: test_persistence.py  test_pipeline.py  test_schema.py  test_synthetic_detector.py  test_vision_api.py  test_yolo_detector.py
services/digital-twin/: Dockerfile  README.md  pyproject.toml
services/digital-twin/app/: config.py  main.py
services/digital-twin/tests/: conftest.py  test_machines.py
services/identity-rbac/: Dockerfile  README.md  pyproject.toml
services/identity-rbac/app/: config.py  main.py
services/identity-rbac/tests/: conftest.py  test_users.py  test_workers.py
services/ingestion-gateway/: Dockerfile  README.md  pyproject.toml
services/ingestion-gateway/app/: config.py  main.py
services/ingestion-gateway/tests/: conftest.py  test_sensors.py  test_weather.py
services/iot-simulator/: Dockerfile  pyproject.toml
services/iot-simulator/app/: auth.py  config.py  db.py  loop.py  main.py
services/iot-simulator/tests/: conftest.py  test_control.py  test_engine.py  test_websocket.py
services/knowledge-graph/: Dockerfile  README.md  pyproject.toml
services/knowledge-graph/app/: auth.py  config.py  db.py  main.py
services/knowledge-graph/tests/: conftest.py  test_graph_api.py  test_schema.py  test_sync.py  test_writes_and_reads.py
services/predictive-risk-engine/: Dockerfile  README.md  pyproject.toml
services/predictive-risk-engine/app/: config.py  db.py  main.py
services/predictive-risk-engine/scripts/: seed_fusion_demo_data.py
services/predictive-risk-engine/tests/: conftest.py  test_fusion_api.py  test_fusion_evidence.py  test_fusion_explainability.py  test_fusion_gates.py  test_fusion_networks.py  test_fusion_pipeline_integration.py  test_fusion_scoring.py  test_fusion_simulator.py  test_fusion_temporal.py  test_maintenance.py  test_risk_engine.py
services/rag-service/: Dockerfile  README.md  pyproject.toml
services/rag-service/app/: config.py  main.py
services/rag-service/scripts/: seed_corpus.py
services/rag-service/tests/: conftest.py  test_chunking.py  test_citation.py  test_embeddings.py  test_hallucination.py  test_knowledge_base.py  test_nli.py  test_ocr.py  test_pipeline_integration.py  test_rag_api.py  test_reranking.py  test_retrieval_fusion.py
services/realtime-gateway/: Dockerfile  README.md  pyproject.toml
services/realtime-gateway/app/: config.py
(+271 files in other folders)
