[tool.poetry]
name = "aegis-api-common"
version = "0.1.0"
description = "Shared FastAPI cross-cutting concerns — pagination, filtering, sorting, error handling, logging, and JWT auth/RBAC — used by every service's API modules so all 15 modules (ARCHITECTURE.md's API surface) behave consistently instead of each reinventing them."
authors = ["AEGIS AI Engineering"]
packages = [{ include = "aegis_api_common" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
pydantic = { extras = ["email"], version = "^2.9.2" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
structlog = "^24.4.0"
asyncpg = "^0.30.0"
aegis-db = { path = "../db", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
