[tool.poetry]
name = "aegis-db"
version = "0.1.0"
description = "AEGIS AI shared database package — SQLAlchemy models + Alembic migrations for the complete PostgreSQL/TimescaleDB schema (DATABASE_SCHEMA.md). Consumed as a path dependency by every service that needs DB access."
authors = ["AEGIS AI Engineering"]
packages = [{ include = "aegis_db" }]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
alembic = "^1.13.3"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.1"
mypy = "^1.13.0"
faker = "^30.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
