[tool.poetry]
name = "anomaly-detection"
version = "0.1.0"
description = "Per-signal statistical and ML anomaly models, Sensor Agent's Core, per AGENT_ARCHITECTURE.md section 1"
authors = ["AEGIS AI Engineering"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
alembic = "^1.13.3"
asyncpg = "^0.30.0"
redis = "^5.2.0"
structlog = "^24.4.0"

# AGENT_ARCHITECTURE.md §1 — Sensor Agent's statistical/ML ensemble Core
aiokafka = "^0.11.0"
numpy = "^2.1.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.7.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
