[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "REST and GraphQL edge, RBAC enforcement point, per ARCHITECTURE.md section 22"
authors = ["AEGIS AI Engineering"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
alembic = "^1.13.3"
asyncpg = "^0.30.0"
redis = "^5.2.0"
structlog = "^24.4.0"

# ARCHITECTURE.md §22 — request proxying/forwarding to backend services
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.7.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
