[tool.poetry]
name = "audit-log"
version = "0.1.0"
description = "Immutable event and action history plus compliance export, per ARCHITECTURE.md section 19.5 and DATABASE_SCHEMA.md section 16"
authors = ["AEGIS AI Engineering"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
alembic = "^1.13.3"
asyncpg = "^0.30.0"
redis = "^5.2.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.7.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
