[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = "CV inference pipelines, Vision Agent's Core, per AGENT_ARCHITECTURE.md section 2"
authors = ["AEGIS AI Engineering"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
redis = "^5.2.0"
structlog = "^24.4.0"

aegis-db = { path = "../../libs/db", develop = true }
aegis-api-common = { path = "../../libs/api-common", develop = true }

# AGENT_ARCHITECTURE.md §2 — Vision Agent's per-capability CV detectors.
aiokafka = "^0.11.0"
opencv-python-headless = "^4.10.0.84"
pillow = "^11.0.0"
numpy = "^2.1.0"
ultralytics = "^8.3.0"  # real YOLOv8 — the "Use YOLO" requirement
websockets = "^13.1"  # client for iot-simulator's live telemetry feed
python-jose = { extras = ["cryptography"], version = "^3.3.0" }  # mints the shared-secret JWT this service uses to call notification-service/predictive-risk-engine
python-multipart = "^0.0.12"  # required by FastAPI for the /vision/detect image-upload endpoint

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.7.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
