[tool.poetry]
name = "identity-rbac"
version = "0.1.0"
description = "Users, roles, permissions, and sessions, per ARCHITECTURE.md sections 20 and 21"
authors = ["AEGIS AI Engineering"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = { extras = ["email"], version = "^2.9.2" }
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
redis = "^5.2.0"
structlog = "^24.4.0"

# Shared models — see libs/db/README.md for the "one shared DB package" rationale.
# No per-service alembic dependency here: libs/db owns the single consolidated
# migration chain for the entire schema.
aegis-db = { path = "../../libs/db", develop = true }
aegis-api-common = { path = "../../libs/api-common", develop = true }

# ARCHITECTURE.md §20 — JWT issuance, password hashing, OIDC federation.
# bcrypt used directly, not via passlib -- see app/core/security.py's docstring
# for the confirmed passlib/modern-bcrypt incompatibility this avoids.
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
bcrypt = "^4.2.0"
authlib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.7.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
