[tool.poetry]
name = "knowledge-graph"
version = "0.1.0"
description = "Neo4j-backed equipment, incident, and procedure graph, per KNOWLEDGE_GRAPH.md"
authors = ["AEGIS AI Engineering"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
redis = "^5.2.0"
structlog = "^24.4.0"

aegis-db = { path = "../../libs/db", develop = true }
aegis-api-common = { path = "../../libs/api-common", develop = true }

# KNOWLEDGE_GRAPH.md — Neo4j is the primary store here; Postgres (via asyncpg,
# not the ORM -- this service owns no relational tables/migrations of its own)
# is the pull-sync source until a real event stream exists (sync.py's docstring)
neo4j = "^5.26.0"
aiokafka = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.7.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
