[tool.poetry]
name = "predictive-risk-engine"
version = "0.1.0"
description = "Cross-signal correlation, Bayesian risk fusion, survival scoring, per RISK_FUSION_ENGINE.md and AGENT_ARCHITECTURE.md sections 7, 8, 11"
authors = ["AEGIS AI Engineering"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = { extras = ["email"], version = "^2.9.2" }
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
redis = "^5.2.0"
structlog = "^24.4.0"
httpx = "^0.27.2"

# Shared models/migrations + cross-cutting API concerns — see libs/db/README.md
# and libs/api-common/pyproject.toml. No per-service alembic dependency: libs/db
# owns the single consolidated migration chain for the entire schema.
aegis-db = { path = "../../libs/db", develop = true }
aegis-api-common = { path = "../../libs/api-common", develop = true }

# RISK_FUSION_ENGINE.md — Bayesian fusion networks (gates.py/networks.py),
# temporal reasoning incl. dynamic time warping (temporal.py), and survival-
# style scoring (scoring.py) are all implemented directly in pure Python --
# genuine probabilistic math (odds multiplication, noisy-OR/AND, sigmoid
# likelihood curves), no learned model or heavy numerical stack needed, so
# scipy/scikit-learn/langgraph/langchain (this service's original aspirational
# deps) are removed as unused rather than left aboard.
aiokafka = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
